<resources>
    <string name="app_name">Chatie</string>
    <string name="verify_your_phone_number">Verify your phone number</string>
    <string name="chats_app_will_send_an_sms_message_to_verify_your_phone_number">ChatsApp will send an SMS message to verify your phone number.</string>
    <string name="type_your_phone_number">Type your phone number</string>
    <string name="_continue">Continue</string>
    <string name="enter_the_otp_code_to_verify_your_phone_number">Enter the OTP code to verify your phone number.</string>
    <string name="type_your_name">Type your name</string>
    <string name="setup_profile">Setup Profile</string>
    <string name="please_set_your_name_and_profile_image">Please set your name and profile image.</string>
    <string name="profile_info">Profile Info</string>
    <string name="type_a_message">Type a message...</string>
    <string name="chats">Chats</string>
    <string name="status">Status</string>
    <string name="profile">Profile</string>
    <string name="call">Call</string>
    <string name="save">Save</string>
    <string name="transition_name">Transition Name</string>
    <string name="logout">Logout</string>
    <string name="coming_soon">Coming Soon...</string>
    <string name="public_group">Public Group</string>
    <string name="search">Search</string>
    <string name="invite">Invite</string>
    <string name="settings">Settings</string>
</resources>