<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="12dp"
    tools:context="com.developer.vijay.chatie.ui.activities.PhoneNumberActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/mobile_auth" />

    <TextView
        android:id="@+id/tvVerifyNumberTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/comfortaa_bold"
        android:text="@string/verify_your_phone_number"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tvVerifyNumberDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/chats_app_will_send_an_sms_message_to_verify_your_phone_number"
        android:textColor="@color/black_50"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/alabaster"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/textbox_outline"
            android:ems="10"
            android:hint="@string/type_your_phone_number"
            android:imeOptions="actionDone"
            android:padding="10dp"
            android:text="+91 "
            android:textColor="@color/black_50"
            android:textColorHint="@color/black_50"
            tools:text="+91 9876543210" />

        <Button
            android:id="@+id/btnContinue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/green"
            android:text="@string/_continue"
            android:textColor="@color/black" />

    </LinearLayout>

</LinearLayout>