<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/llSetupProfile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="12dp"
    tools:context=".ui.activities.SetupProfileActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ivUser"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/avatar"
            android:transitionName="@string/transition_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivAddImage"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_add_reaction"
            app:layout_constraintBottom_toBottomOf="@id/ivUser"
            app:layout_constraintEnd_toEndOf="@id/ivUser"
            app:layout_constraintTop_toTopOf="@id/ivUser"
            app:layout_constraintVertical_bias="0.85" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tvProfileTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/comfortaa_bold"
        android:text="@string/profile_info"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tvProfileDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/please_set_your_name_and_profile_image"
        android:textColor="@color/black_50"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/alabaster"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/textbox_outline"
            android:ems="10"
            android:hint="@string/type_your_name"
            android:padding="10dp"
            android:textColor="@color/black_50"
            android:textColorHint="@color/black_50" />

        <Button
            android:id="@+id/btnSetupProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/green"
            android:text="@string/setup_profile"
            android:textColor="@color/black" />
    </LinearLayout>

</LinearLayout>