<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.activities.otp.OtpActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/otp_verify" />

    <TextView
        android:id="@+id/tvVerifyOtpTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/comfortaa_bold"
        android:textColor="@color/black"
        android:textSize="18sp"
        tools:text="Verify +923001234567" />

    <TextView
        android:id="@+id/tvVerifyOtpDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/enter_the_otp_code_to_verify_your_phone_number"
        android:textColor="@color/black_50"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <com.mukesh.OtpView
            android:id="@+id/otpView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:focusableInTouchMode="true"
            android:inputType="number"
            android:itemBackground="@color/grey"
            android:textColor="@color/black"
            app:OtpItemCount="6"
            app:OtpLineColor="@color/green"
            app:OtpViewType="line"
            tools:text="123456" />

        <Button
            android:id="@+id/btnContinue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/green"
            android:text="@string/_continue" />

    </LinearLayout>

</LinearLayout>